building the Deep Neural Netowkr Model

--- a/MLNN-A1-209338R.ipynb
+++ b/MLNN-A1-209338R.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "8"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "<function matplotlib.pyplot.show(*args, **kw)>"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -166,10 +166,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# creating the Deep Neural Network Model\n",
+    "model = tf.keras.models.Sequential()  # feed-forward model\n",
+    "\n",
+    "# adding input layer by flattening the input attributes into a single dimension'\n",
+    "model.add(tf.keras.layers.Flatten())\n",
+    "\n",
+    "# adding hidden layers\n",
+    "model.add(tf.keras.layers.Dense(128, activation=tf.keras.activations.sigmoid))\n",
+    "model.add(tf.keras.layers.Dense(128, activation=tf.keras.activations.tanh))\n",
+    "model.add(tf.keras.layers.Dense(10, activation=tf.keras.activations.softmax))\n",
+    "\n",
+    "model.compile(optimizer=\"adam\", loss=\"sparse_categorical_crossentropy\", metrics=[\"accuracy\"])"
+   ]
   }
  ],
  "metadata": {
