completed the model and tested for accuracy

--- a/MLNN-A1-209338R.ipynb
+++ b/MLNN-A1-209338R.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "8"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "<function matplotlib.pyplot.show(*args, **kw)>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -166,9 +166,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\ProgramData\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\ops\\resource_variable_ops.py:435: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n"
+     ]
+    }
+   ],
    "source": [
     "# creating the Deep Neural Network Model\n",
     "model = tf.keras.models.Sequential()  # feed-forward model\n",
@@ -177,11 +187,99 @@
     "model.add(tf.keras.layers.Flatten())\n",
     "\n",
     "# adding hidden layers\n",
-    "model.add(tf.keras.layers.Dense(128, activation=tf.keras.activations.sigmoid))\n",
-    "model.add(tf.keras.layers.Dense(128, activation=tf.keras.activations.tanh))\n",
+    "model.add(tf.keras.layers.Dense(512, activation=tf.keras.activations.relu))\n",
+    "model.add(tf.keras.layers.Dense(256, activation=tf.keras.activations.relu))\n",
+    "model.add(tf.keras.layers.Dense(128, activation=tf.keras.activations.relu))\n",
     "model.add(tf.keras.layers.Dense(10, activation=tf.keras.activations.softmax))\n",
     "\n",
+    "# compllie the model\n",
     "model.compile(optimizer=\"adam\", loss=\"sparse_categorical_crossentropy\", metrics=[\"accuracy\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "49000/49000 [==============================] - 12s 244us/sample - loss: 0.2311 - acc: 0.9290\n",
+      "Epoch 2/20\n",
+      "49000/49000 [==============================] - 11s 232us/sample - loss: 0.0936 - acc: 0.9707\n",
+      "Epoch 3/20\n",
+      "49000/49000 [==============================] - 11s 227us/sample - loss: 0.0611 - acc: 0.9808\n",
+      "Epoch 4/20\n",
+      "49000/49000 [==============================] - 11s 234us/sample - loss: 0.0445 - acc: 0.9854\n",
+      "Epoch 5/20\n",
+      "49000/49000 [==============================] - 11s 231us/sample - loss: 0.0352 - acc: 0.9888\n",
+      "Epoch 6/20\n",
+      "49000/49000 [==============================] - 11s 223us/sample - loss: 0.0293 - acc: 0.9901\n",
+      "Epoch 7/20\n",
+      "49000/49000 [==============================] - 12s 238us/sample - loss: 0.0261 - acc: 0.9916\n",
+      "Epoch 8/20\n",
+      "49000/49000 [==============================] - 12s 239us/sample - loss: 0.0210 - acc: 0.9932\n",
+      "Epoch 9/20\n",
+      "49000/49000 [==============================] - 11s 225us/sample - loss: 0.0198 - acc: 0.9938\n",
+      "Epoch 10/20\n",
+      "49000/49000 [==============================] - 11s 222us/sample - loss: 0.0175 - acc: 0.9945\n",
+      "Epoch 11/20\n",
+      "49000/49000 [==============================] - 15s 305us/sample - loss: 0.0149 - acc: 0.9954\n",
+      "Epoch 12/20\n",
+      "49000/49000 [==============================] - 20s 404us/sample - loss: 0.0147 - acc: 0.9952\n",
+      "Epoch 13/20\n",
+      "49000/49000 [==============================] - 20s 409us/sample - loss: 0.0131 - acc: 0.9961\n",
+      "Epoch 14/20\n",
+      "49000/49000 [==============================] - 20s 405us/sample - loss: 0.0155 - acc: 0.9955\n",
+      "Epoch 15/20\n",
+      "49000/49000 [==============================] - 20s 417us/sample - loss: 0.0095 - acc: 0.9971\n",
+      "Epoch 16/20\n",
+      "49000/49000 [==============================] - 21s 422us/sample - loss: 0.0124 - acc: 0.9968\n",
+      "Epoch 17/20\n",
+      "49000/49000 [==============================] - 20s 411us/sample - loss: 0.0096 - acc: 0.9973\n",
+      "Epoch 18/20\n",
+      "49000/49000 [==============================] - 16s 326us/sample - loss: 0.0102 - acc: 0.9970\n",
+      "Epoch 19/20\n",
+      "49000/49000 [==============================] - 10s 197us/sample - loss: 0.0098 - acc: 0.9972\n",
+      "Epoch 20/20\n",
+      "49000/49000 [==============================] - 10s 200us/sample - loss: 0.0115 - acc: 0.9969\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.keras.callbacks.History at 0x1fd162b4608>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "EPOCHS = 20\n",
+    "\n",
+    "# training for multiple epochs\n",
+    "model.fit(x_train, y_train, epochs=EPOCHS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21000/21000 [==============================] - 1s 54us/sample - loss: 0.1455 - acc: 0.9757\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss, accuracy = model.evaluate(x_test, y_test)"
    ]
   }
  ],
