creating new model

--- a/3.ipynb
+++ b/3.ipynb
@@ -137,7 +137,7 @@
    "outputs": [],
    "source": [
     "# adding some noise to the data\n",
-    "NOISE_FACTOR = 0.30\n",
+    "NOISE_FACTOR = 0.25\n",
     "\n",
     "x_train_noisy = x_train + NOISE_FACTOR * np.random.normal(loc=0.0, scale=1.0, size=x_train.shape)\n",
     "x_test_noisy = x_test + NOISE_FACTOR * np.random.normal(loc=0.0, scale=1.0, size=x_test.shape)\n",
@@ -222,51 +222,51 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "56000/56000 [==============================] - 5s 95us/sample - loss: 0.2439 - acc: 0.9268\n",
+      "56000/56000 [==============================] - 5s 92us/sample - loss: 0.2434 - acc: 0.9274\n",
       "Epoch 2/20\n",
-      "56000/56000 [==============================] - 5s 87us/sample - loss: 0.0929 - acc: 0.9704\n",
+      "56000/56000 [==============================] - 5s 89us/sample - loss: 0.0958 - acc: 0.9705\n",
       "Epoch 3/20\n",
-      "56000/56000 [==============================] - 5s 84us/sample - loss: 0.0617 - acc: 0.9801\n",
+      "56000/56000 [==============================] - 5s 86us/sample - loss: 0.0626 - acc: 0.9797\n",
       "Epoch 4/20\n",
-      "56000/56000 [==============================] - 5s 86us/sample - loss: 0.0431 - acc: 0.9860\n",
+      "56000/56000 [==============================] - 5s 84us/sample - loss: 0.0417 - acc: 0.9867\n",
       "Epoch 5/20\n",
-      "56000/56000 [==============================] - 5s 84us/sample - loss: 0.0334 - acc: 0.9887\n",
+      "56000/56000 [==============================] - 5s 85us/sample - loss: 0.0349 - acc: 0.9884\n",
       "Epoch 6/20\n",
-      "56000/56000 [==============================] - 5s 93us/sample - loss: 0.0233 - acc: 0.9921\n",
+      "56000/56000 [==============================] - 5s 86us/sample - loss: 0.0246 - acc: 0.9919\n",
       "Epoch 7/20\n",
-      "56000/56000 [==============================] - 5s 93us/sample - loss: 0.0210 - acc: 0.9927\n",
+      "56000/56000 [==============================] - 5s 91us/sample - loss: 0.0213 - acc: 0.9926\n",
       "Epoch 8/20\n",
-      "56000/56000 [==============================] - 5s 90us/sample - loss: 0.0153 - acc: 0.9951\n",
+      "56000/56000 [==============================] - 5s 93us/sample - loss: 0.0174 - acc: 0.9942\n",
       "Epoch 9/20\n",
-      "56000/56000 [==============================] - 5s 95us/sample - loss: 0.0149 - acc: 0.9950\n",
+      "56000/56000 [==============================] - 5s 98us/sample - loss: 0.0141 - acc: 0.9953\n",
       "Epoch 10/20\n",
-      "56000/56000 [==============================] - 5s 93us/sample - loss: 0.0139 - acc: 0.9951\n",
+      "56000/56000 [==============================] - 5s 96us/sample - loss: 0.0140 - acc: 0.9952\n",
       "Epoch 11/20\n",
-      "56000/56000 [==============================] - 5s 94us/sample - loss: 0.0113 - acc: 0.9960\n",
+      "56000/56000 [==============================] - 5s 95us/sample - loss: 0.0120 - acc: 0.9959\n",
       "Epoch 12/20\n",
-      "56000/56000 [==============================] - 5s 94us/sample - loss: 0.0120 - acc: 0.9959\n",
+      "56000/56000 [==============================] - 6s 100us/sample - loss: 0.0092 - acc: 0.9969\n",
       "Epoch 13/20\n",
-      "56000/56000 [==============================] - 5s 92us/sample - loss: 0.0101 - acc: 0.9966\n",
+      "56000/56000 [==============================] - 6s 99us/sample - loss: 0.0118 - acc: 0.9961\n",
       "Epoch 14/20\n",
-      "56000/56000 [==============================] - 5s 97us/sample - loss: 0.0104 - acc: 0.9967\n",
+      "56000/56000 [==============================] - 6s 100us/sample - loss: 0.0092 - acc: 0.9971\n",
       "Epoch 15/20\n",
-      "56000/56000 [==============================] - 5s 92us/sample - loss: 0.0082 - acc: 0.9971\n",
+      "56000/56000 [==============================] - 6s 105us/sample - loss: 0.0096 - acc: 0.9969\n",
       "Epoch 16/20\n",
-      "56000/56000 [==============================] - 6s 100us/sample - loss: 0.0080 - acc: 0.9973\n",
+      "56000/56000 [==============================] - 6s 105us/sample - loss: 0.0100 - acc: 0.9971\n",
       "Epoch 17/20\n",
-      "56000/56000 [==============================] - 5s 92us/sample - loss: 0.0099 - acc: 0.9970\n",
+      "56000/56000 [==============================] - 6s 104us/sample - loss: 0.0082 - acc: 0.9973\n",
       "Epoch 18/20\n",
-      "56000/56000 [==============================] - 5s 96us/sample - loss: 0.0070 - acc: 0.9976\n",
+      "56000/56000 [==============================] - 6s 105us/sample - loss: 0.0083 - acc: 0.9972\n",
       "Epoch 19/20\n",
-      "56000/56000 [==============================] - 5s 95us/sample - loss: 0.0072 - acc: 0.9976\n",
+      "56000/56000 [==============================] - 6s 105us/sample - loss: 0.0065 - acc: 0.9979\n",
       "Epoch 20/20\n",
-      "56000/56000 [==============================] - 5s 97us/sample - loss: 0.0073 - acc: 0.9974\n"
+      "56000/56000 [==============================] - 6s 106us/sample - loss: 0.0090 - acc: 0.9974\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1749b9b4648>"
+       "<tensorflow.python.keras.callbacks.History at 0x2c3a3c345c8>"
       ]
      },
      "execution_count": 14,
@@ -290,7 +290,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "14000/14000 [==============================] - 0s 31us/sample - loss: 0.1668 - acc: 0.9758\n"
+      "14000/14000 [==============================] - 0s 34us/sample - loss: 0.1549 - acc: 0.9751\n"
      ]
     }
    ],
